# platonic-io

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  recognition_test.py  siema  test.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: quality.yml  test.yml
docs/: cli.md  index.md  installation.md
platonic/: __init__.py  cli.py
platonic-io/: __init__.py  cli.py
platonic_io/: GUI.py  __init__.py  cli.py  get_plate.py  local_utils.py  ocr.py  platonic_io2.py  recognition_engine.py  recognition_test.py  tutek_local_utils.py
tests/: __init__.py  fixtures.py  test_ocr.py  test_platonic.py
