[tool.poetry]
name = "platonic-io"
version = "0.1.0"
description = "Package for recognizing registration plates"
authors = [
    "Szymon Cader <szymon.sc.cader@gmail.com>",
    "Patryk Kawa <kawapatryk99@gmail.com>",
    "Bartosz Rudnicki <bartek@rudnicki.szczecin.pl>"
]
license = "MIT"

[tool.isort]
profile = "black"
src_paths = "platonic_io"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.2"
pytest = {version = "^6.1.2", optional = true}
pytest-cov = {version = "^2.10.1", optional = true}
opencv-python = "^4.4.0"
numpy = "^1.19.4"
pytesseract = "^0.3.6"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
markdown-include = "^0.6.0"
pre-commit = "^2.8.2"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pygments = "^2.7.2"
tox = "^3.20.1"
mypy = "^0.790"


[tool.poetry.scripts]
platonic-io = 'platonic_io.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
